--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<title>Joseph Reed Gaines</title>
+		<meta
+			name="description"
+			content="Joseph Reed Gaines is a web developer, teacher, photographer, writer, and friend. This is his personal and professional website."
+		/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
